--- a/composer.json
+++ b/composer.json
@@ -4,66 +4,63 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.3",
-        "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.4",
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "doctrine/doctrine-migrations-bundle": "^3.1",
-        "knplabs/knp-time-bundle": "^1.16",
-        "phpdocumentor/reflection-docblock": "^5.2",
-        "stof/doctrine-extensions-bundle": "^1.4",
-        "symfony/asset": "^5.4",
-        "symfony/config": "^5.4",
-        "symfony/console": "^5.4",
-        "symfony/dotenv": "^5.4",
-        "symfony/error-handler": "^5.4",
-        "symfony/expression-language": "^5.4",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "^5.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/http-client": "^5.4",
-        "symfony/intl": "^5.4",
-        "symfony/lock": "^5.4",
-        "symfony/mailer": "^5.4",
-        "symfony/messenger": "^5.4",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/process": "^5.4",
-        "symfony/property-access": "^5.4",
-        "symfony/property-info": "^5.4",
-        "symfony/proxy-manager-bridge": "^5.4",
-        "symfony/rate-limiter": "^5.4",
-        "symfony/security-bundle": "^5.4",
-        "symfony/serializer": "^5.4",
-        "symfony/string": "^5.4",
-        "symfony/translation": "^5.4",
-        "symfony/twig-bundle": "^5.4",
-        "symfony/validator": "^5.4",
-        "symfony/web-link": "^5.4",
-        "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "^5.4",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "vich/uploader-bundle": "^1.18",
+        "doctrine/doctrine-bundle": "^2.5",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "knplabs/knp-time-bundle": "^1.18",
+        "stof/doctrine-extensions-bundle": "^1.7",
+        "symfony/asset": "^6.0",
+        "symfony/config": "^6.0",
+        "symfony/console": "^6.0",
+        "symfony/doctrine-messenger": "^6.0",
+        "symfony/dotenv": "^6.0",
+        "symfony/error-handler": "^6.0",
+        "symfony/expression-language": "^6.0",
+        "symfony/flex": "^2.0",
+        "symfony/form": "^6.0",
+        "symfony/framework-bundle": "^6.0",
+        "symfony/http-client": "^6.0",
+        "symfony/intl": "^6.0",
+        "symfony/lock": "^6.0",
+        "symfony/mailer": "^6.0",
+        "symfony/messenger": "^6.0",
+        "symfony/monolog-bundle": "^3.7",
+        "symfony/process": "^6.0",
+        "symfony/property-access": "^6.0",
+        "symfony/property-info": "^6.0",
+        "symfony/proxy-manager-bridge": "^6.0",
+        "symfony/rate-limiter": "^6.0",
+        "symfony/security-bundle": "^6.0",
+        "symfony/serializer": "^6.0",
+        "symfony/string": "^6.0",
+        "symfony/translation": "^6.0",
+        "symfony/twig-bundle": "^6.0",
+        "symfony/validator": "^6.0",
+        "symfony/web-link": "^6.0",
+        "symfony/webpack-encore-bundle": "^1.13",
+        "symfony/yaml": "^6.0",
+        "twig/extra-bundle": "^3.0",
+        "twig/twig": "^3.0",
         "umbrella2/adminbundle": "dev-master",
-        "umbrella2/corebundle": "dev-master"
+        "umbrella2/corebundle": "dev-master",
+        "vich/uploader-bundle": "^1.18"
     },
     "require-dev": {
-        "ekino/phpstan-banned-code": "^0.4.0",
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "phpstan/phpstan": "^0.12.83",
-        "phpstan/phpstan-doctrine": "^0.12.33",
-        "phpstan/phpstan-symfony": "^0.12.25",
+        "friendsofphp/php-cs-fixer": "^3.6",
+        "phpstan/phpstan": "^1.2",
+        "phpstan/phpstan-doctrine": "^1.1",
+        "phpstan/phpstan-symfony": "^1.1",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^5.4",
-        "symfony/css-selector": "^5.4",
-        "symfony/debug-bundle": "^5.4",
-        "symfony/maker-bundle": "^1.21",
-        "symfony/phpunit-bridge": "^5.2",
-        "symfony/stopwatch": "^5.4",
-        "symfony/web-profiler-bundle": "^5.4"
+        "symfony/browser-kit": "^6.0",
+        "symfony/css-selector": "^6.0",
+        "symfony/debug-bundle": "^6.0",
+        "symfony/maker-bundle": "^1.36",
+        "symfony/phpunit-bridge": "^6.0",
+        "symfony/web-profiler-bundle": "^6.0"
     },
     "config": {
         "preferred-install": {
@@ -108,7 +105,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "^5.4"
+            "require": "^6.0"
         }
     }
 }
